cabal-version:      2.4
name:               concurrentWait4input
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Haskell MVar TVar testing.

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         ariady.putra@gmail.com

extra-source-files: CHANGELOG.md

executable concurrentWait4input
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                 ,    stm
                 ,    time
    hs-source-dirs:   app
    default-language: Haskell2010
